--- a/package.json
+++ b/package.json
@@ -4,22 +4,14 @@
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.ts"
+    "dev": "nodemon ./src/index.ts"
   },
   "keywords": [],
   "dependencies": {
     "@faker-js/faker": "^7.5.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/cors": "^2.8.12",
-    "@types/cryptr": "^4.0.1",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.13",
-    "@types/joi": "^17.2.3",
-    "@types/node": "^18.7.14",
-    "@types/nodemon": "^1.19.2",
-    "@types/pg": "^8.6.5",
+    "@prisma/client": "^4.0.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "cryptr": "^6.0.3",
@@ -34,8 +26,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "prisma": "^4.3.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cryptr": "^4.0.1",
+    "@types/dotenv": "^8.2.0",
+    "@types/joi": "^17.2.3",
+    "@types/nodemon": "^1.19.2",
+    "@types/node": "^17.0.24",
+    "@types/pg": "^8.6.5",
+    "nodemon": "^2.0.15",
+    "prisma": "^4.0.0",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   }
 }
