--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
-    "start": "node dist/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/index.ts"
+    "build": "tsc && npx prisma migrate dev --name init",
+    "start": "node dist/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "dependencies": {
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "prisma": "^4.0.0",
     "express-async-errors": "^3.1.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
@@ -36,8 +37,6 @@
     "@types/nodemon": "^1.19.2",
     "@types/node": "^17.0.24",
     "@types/pg": "^8.6.5",
-    "nodemon": "^2.0.15",
-    "prisma": "^4.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   }
