--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
-    "build": "tsc && npx prisma migrate dev --name init",
-    "start": "node dist/index.js",
+    "start": "node .dist/src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -29,11 +28,6 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/bcrypt": "^5.0.0",
-    "@types/cryptr": "^4.0.1",
-    "@types/dotenv": "^8.2.0",
-    "@types/joi": "^17.2.3",
-    "@types/nodemon": "^1.19.2",
     "@types/node": "^17.0.24",
     "@types/pg": "^8.6.5",
     "prisma": "^4.0.0",
