--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
+    "build":"tsc && npx prisma migrate dev",
     "start": "node .dist/src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
