--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.ts",
   "scripts": {
     "build":"tsc",
-    "start": "node .dist/src/index.js",
+    "start": "node .dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
