--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
-    "build":"tsc",
+    "build": "tsc",
     "start": "node .dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,6 +27,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.12",
+    "@types/cryptr": "^4.0.1",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^17.0.24",
