--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "projeto19-drivenpass",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.ts",
+  "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node .dist/index.js",
+    "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
